tests/js_error/error_types/analyze.js
function test() {
  let x = 1;
  let y = 2;
  let x = 3;
  let y = 4;
}